ecmascript/parser/tests/test262-error-references/fail/ef81b93cf9bdb4ec.js.stderr
error: Unexpected token Some(AssignOp("="))
 --> $DIR/tests/test262-parser/fail/ef81b93cf9bdb4ec.js:1:10
  |
1 | (class {a=0})
  |          ^

